Incluindo uma stack

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         <li>javaScript</li>
                         <li>React</li>
                         <li>Typescript</li>
+                        <li>Nodejs</li>
                         <li>Express</li>
                         <li>TypeORM</li>
                         <li>PostgreSql</li>
